# PyETo

./: .gitattributes  .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml  release.yml
docs/: conf.py
pyeto/: __init__.py  _check.py  convert.py  fao.py  thornthwaite.py
tests/: __init__.py  test_check.py  test_convert.py  test_fao.py  test_thornthwaite.py
