[project]
name = "PyETo"
description = "Library for estimating reference and potential evapotranspiration."
authors = [{name = "Mark Richards", email = "mark.l.a.richardsREMOVETHIS@gmail.com"}]
requires-python = ">= 3.11"
version = "0.2.2"
dependencies = ["numpy>=2.2.5,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 100

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pyeto = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
build = ["build"]
test = ["test"]
lint = ["lint"]

[tool.pixi.feature.build.tasks]
build = "python -m build"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.lint.tasks]
format = "ruff format"
check-formatting = "ruff format --check"
lint = "ruff check"
lint-fix = "ruff check --fix"

[dependency-groups]
build = ["build"]
test = ["pytest"]
lint = ["ruff"]
